--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">E-Ticaret App</a>
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
-        <a class="nav-link" href="#">Sign out</a>
+        <a *ngIf="isLoggedIn()==false" class="nav-link" [routerLink]="['/login']">Login</a>
+        <a *ngIf="isLoggedIn()==true" (click)="logOut()" class="nav-link" [routerLink]="['/login']">Log Out</a>
+
       </li>
     </ul>
   </nav>
